make nginx staple in appropriate headers for ssl proxying

--- a/config/civic.conf
+++ b/config/civic.conf
@@ -3,7 +3,7 @@ upstream app {
 }
 
 server {
- server_name civicdb.org;
+ server_name staging.civicdb.org;
  root /var/www/civic/current/public;
 
  location / {
@@ -15,17 +15,45 @@ server {
 
  location ^~ /api/ {
   proxy_pass http://app;
-  proxy_set_header Host $host;
+  proxy_set_header  Host $host;
+  proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header  X-Forwarded-Proto $scheme;
+  proxy_set_header  X-Forwarded-Ssl on; # Optional
+  proxy_set_header  X-Forwarded-Port $server_port;
+  proxy_set_header  X-Forwarded-Host $host;
  }
 
  location ^~ /links/ {
   proxy_pass http://app;
   proxy_set_header Host $host;
+  proxy_set_header  Host $host;
+  proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header  X-Forwarded-Proto $scheme;
+  proxy_set_header  X-Forwarded-Ssl on; # Optional
+  proxy_set_header  X-Forwarded-Port $server_port;
+  proxy_set_header  X-Forwarded-Host $host;
+ }
+
+ location ^~ /rails/ {
+  proxy_pass http://app;
+  proxy_set_header Host $host;
+  proxy_set_header  Host $host;
+  proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header  X-Forwarded-Proto $scheme;
+  proxy_set_header  X-Forwarded-Ssl on; # Optional
+  proxy_set_header  X-Forwarded-Port $server_port;
+  proxy_set_header  X-Forwarded-Host $host;
  }
 
  location ^~ /admin/ {
   proxy_pass http://app;
   proxy_set_header Host $host;
+  proxy_set_header  Host $host;
+  proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header  X-Forwarded-Proto $scheme;
+  proxy_set_header  X-Forwarded-Ssl on; # Optional
+  proxy_set_header  X-Forwarded-Port $server_port;
+  proxy_set_header  X-Forwarded-Host $host;
  }
 
  location ^~ /assets/ {
@@ -36,4 +64,5 @@ server {
 
  client_max_body_size 4G;
  keepalive_timeout 10;
+
 }
