run sidekiq in staginig

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -61,6 +61,9 @@ gem 'staccato', '~> 0.5.3'
 
 gem 'angular_rails_csrf', '~> 5.0.0'
 
+
+gem 'sidekiq', '~> 6.4.1'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
