--- a/config/civic.conf
+++ b/config/civic.conf
@@ -13,7 +13,7 @@ server {
   add_header Cache-Control public;
  }
 
- location ^~ /api/ {
+ location ~ /api/(graphql|sign_out|status|upload_profile_image|auth) {
   proxy_pass http://app;
   proxy_set_header  Host $host;
   proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -21,6 +21,11 @@ server {
   proxy_set_header  X-Forwarded-Ssl on; # Optional
   proxy_set_header  X-Forwarded-Port $server_port;
   proxy_set_header  X-Forwarded-Host $host;
+ }
+
+ location ~ /api/ {
+   proxy_pass https://civicdb.org;
+   #proxy_pass https://v1.civicdb.org;
  }
 
  location ^~ /links/ {
