add sidekiq cron dependency

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -63,6 +63,7 @@ gem 'angular_rails_csrf', '~> 5.0.0'
 
 
 gem 'sidekiq', '~> 6.4.1'
+gem 'sidekiq-cron', '~> 1.2.0'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
