--- a/config/civic.conf
+++ b/config/civic.conf
@@ -13,7 +13,7 @@ server {
   add_header Cache-Control public;
  }
 
- location ~ /api/(graphql|sign_out|status|upload_profile_image|auth) {
+ location ~ /api/(graphql|sign_out|status|upload_profile_image|auth|graphiql) {
   proxy_pass http://app;
   proxy_set_header  Host $host;
   proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
