dont  error out if the js file isnt already present

--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -34,7 +34,7 @@ jobs:
       - run: yarn install
         working-directory: ./client
 
-      - run: rm public/*.js
+      - run: rm -f public/*.js
         working-directory: ./server
 
       - run: yarn build --prod
