--- a/docs/config.yml
+++ b/docs/config.yml
@@ -4,7 +4,7 @@ introspection:
   schemaFile: ./client/src/app/generated/server.model.graphql
 
 info:
-  title: CiVIC 2 API Documentation
+  title: CIViC 2 API Documentation
   description: Documentation for the CIViC GraphQL API
   contact:
     name:  The CIViC Development Team
