--- a/config/civic.conf
+++ b/config/civic.conf
@@ -7,10 +7,16 @@ server {
  root /var/www/civic/current/public;
 
  location / {
-  try_files $uri $uri/ /index.html;
+  try_files $uri $uri/ @index;
   gzip_static on;
   expires max;
   add_header Cache-Control public;
+ }
+
+ location @index {
+   add_header Cache-Control no-cache;
+   expires 0;
+   try_files /index.html =404;
  }
 
  location ~ /api/(graphql|sign_out|status|upload_profile_image|auth|graphiql) {
