--- a/client/proxy.config.json
+++ b/client/proxy.config.json
@@ -30,5 +30,9 @@
   "/packs/js": {
     "target": "http://localhost:3000",
     "secure": false
+  },
+  "/jobs/*": {
+    "target": "http://localhost:3000",
+    "secure": false
   }
 }
