--- a/config/civic.conf
+++ b/config/civic.conf
@@ -67,6 +67,17 @@ server {
   proxy_set_header  X-Forwarded-Host $host;
  }
 
+ location ^~ /jobs/ {
+  proxy_pass http://app;
+  proxy_set_header Host $host;
+  proxy_set_header  Host $host;
+  proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header  X-Forwarded-Proto $scheme;
+  proxy_set_header  X-Forwarded-Ssl on; # Optional
+  proxy_set_header  X-Forwarded-Port $server_port;
+  proxy_set_header  X-Forwarded-Host $host;
+ }
+
  location ^~ /assets/ {
     gzip_static on;
     expires max;
