--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "@ngrx/component": "^12.5.1",
     "@ngx-formly/core": "^5.10.32",
     "@ngx-formly/ng-zorro-antd": "^0.0",
-    "apollo-angular": "^2.1.0",
+    "apollo-angular": "^3.0.1",
     "ng-zorro-antd": "^13.0.1",
     "ngx-cookie-service": "^13.1.2",
     "ngx-logger": "^5.0.7",
@@ -47,16 +47,16 @@
     "@angular/cli": "^13.1.4",
     "@angular/compiler-cli": "13.1.3",
     "@angular/language-server": "^13.1.1",
-    "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "1.20.0",
-    "@graphql-codegen/fragment-matcher": "^2.0.1",
-    "@graphql-codegen/introspection": "^1.18.1",
-    "@graphql-codegen/typescript": "1.20.0",
-    "@graphql-codegen/typescript-apollo-angular": "2.2.1",
-    "@graphql-codegen/typescript-apollo-client-helpers": "^1.1.3",
-    "@graphql-codegen/typescript-operations": "^1.17.13",
-    "@graphql-eslint/eslint-plugin": "^0.7.1",
-    "@graphql-inspector/cli": "^2.3.0",
+    "@graphql-codegen/add": "3.1.1",
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/fragment-matcher": "3.2.1",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.10",
+    "@graphql-codegen/typescript-apollo-angular": "3.4.9",
+    "@graphql-codegen/typescript-apollo-client-helpers": "2.1.17",
+    "@graphql-codegen/typescript-operations": "2.3.7",
+    "@graphql-eslint/eslint-plugin": "3.10.3",
+    "@graphql-inspector/cli": "3.1.2",
     "@ngx-formly/schematics": "^5.10.30",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
@@ -71,11 +71,11 @@
     "eslint-plugin-prefer-arrow": "^1.2.2",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.4.0",
+    "graphql": "16.4.0",
     "graphql-cli": "^4.1.0",
-    "graphql-config": "^3.2.0",
-    "graphql-mock": "^1.3.0",
-    "graphql-schema-linter": "^2.0.1",
+    "graphql-config": "4.3.0",
+    "graphql-mock": "2.0.0",
+    "graphql-schema-linter": "3.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.16",
