--- a/client/.graphqlrc.yml
+++ b/client/.graphqlrc.yml
@@ -21,8 +21,8 @@ extensions:
         config:
           apolloClientVersion: 3
           nonOptionalTypename: true
-          futureProofUnions: true
-          futureProofEnums: true
+          futureProofUnions: false
+          futureProofEnums: false
           maybeValue: T | undefined
       ./src/app/generated/server.possible-types.ts:
         plugins:
