--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "ngx-logger": "^5.0.7",
     "ngx-timeago": "^2.0.0",
     "rxjs": "~6.6.6",
+    "rxjs-debug": "^1.3.0",
     "ts-enum-util": "^4.0.2",
     "tslib": "^2.3.1",
     "xstate": "^4.30.3",
