--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~13.1.3",
     "@angular/router": "~13.1.3",
     "@apollo/client": "^3.5.8",
+    "@ngneat/until-destroy": "^9.1.2",
     "@ngrx/component": "^12.5.1",
     "@ngx-formly/core": "^5.10.32",
     "@ngx-formly/ng-zorro-antd": "^0.0",
@@ -42,9 +43,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.4",
-    "@angular-eslint/eslint-plugin": "^1.0.0",
-    "@angular-eslint/eslint-plugin-template": "^1.0.0",
-    "@angular-eslint/template-parser": "^1.0.0",
+    "@angular-eslint/builder": "13.2.1",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/schematics": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
     "@angular/cli": "^13.1.4",
     "@angular/compiler-cli": "13.1.3",
     "@angular/language-server": "^13.1.1",
@@ -61,12 +64,12 @@
     "@ngx-formly/schematics": "^5.10.30",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/eslint-plugin-tslint": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
+    "@typescript-eslint/parser": "5.17.0",
     "casual": "^1.6.2",
     "codelyzer": "^6.0.0",
-    "eslint": "^7.20.0",
+    "eslint": "^8.12.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^31.0.3",
     "eslint-plugin-prefer-arrow": "^1.2.2",
