adjusted various graphql configs for apollo v3 update

--- a/client/.graphqlrc.yml
+++ b/client/.graphqlrc.yml
@@ -24,12 +24,12 @@ extensions:
           futureProofUnions: false
           futureProofEnums: false
           maybeValue: T | undefined
-      ./src/app/generated/server.possible-types.ts:
+      ./src/app/generated/civic.possible-types.ts:
         plugins:
           - fragment-matcher
         config:
-          apolloClientVersion: 2
-      ./src/app/generated/server.field-policies.ts:
+          apolloClientVersion: 3
+      ./src/app/generated/civic.apollo-helpers.ts:
         plugins:
           - typescript-apollo-client-helpers
         config:
