--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --build-optimizer",
+    "build:stats": "ng build --stats-json",
+    "analyze": "webpack-bundle-analyzer ../server/public/stats.json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -35,6 +37,7 @@
     "ngx-timeago": "^2.0.0",
     "rxjs": "~6.6.6",
     "rxjs-debug": "^1.3.0",
+    "rxjs-etc": "^10.6.2",
     "ts-enum-util": "^4.0.2",
     "tslib": "^2.3.1",
     "xstate": "^4.30.3",
@@ -91,7 +94,6 @@
     "patch-package": "^6.4.7",
     "prettier": "^2.5.1",
     "protractor": "~7.0.0",
-    "rxjs-spy": "^7.5.3",
     "svg-to-ts": "^6.0.0",
     "svgo": "^2.3.0",
     "ts-node": "~8.3.0",
