--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,9 @@
     "generate-apollo:start": "graphql-codegen --watch"
   },
   "private": true,
+  "resolutions": {
+    "error-stack-parser": "2.0.6"
+  },
   "dependencies": {
     "@angular/animations": "~13.1.3",
     "@angular/common": "~13.1.3",
@@ -35,9 +38,10 @@
     "ngx-cookie-service": "^13.1.2",
     "ngx-logger": "^5.0.7",
     "ngx-timeago": "^2.0.0",
-    "rxjs": "~6.6.6",
+    "rxjs": "^6.5.3",
     "rxjs-debug": "^1.3.0",
     "rxjs-etc": "^10.6.2",
+    "rxjs-spy": "^7.5.3",
     "ts-enum-util": "^4.0.2",
     "tslib": "^2.3.1",
     "xstate": "^4.30.3",
