add config for docs short url redirect

--- a/config/civic.conf
+++ b/config/civic.conf
@@ -83,6 +83,10 @@ server {
     expires max;
     add_header Cache-Control public;
  }
+ 
+ location ~ /data-clients {
+   return 301 https://civic.readthedocs.io/en/latest/about/data-clients.html;
+ }
 
  client_max_body_size 4G;
  keepalive_timeout 10;
