--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,9 @@
     "@ngx-formly/core": "^5.10.32",
     "@ngx-formly/ng-zorro-antd": "^0.0",
     "apollo-angular": "^3.0.1",
+    "chart.js": "^3.9.1",
     "ng-zorro-antd": "^13.3.2",
+    "ng2-charts": "3.1.2",
     "ngx-cookie-service": "^13.1.2",
     "ngx-logger": "^5.0.7",
     "ngx-timeago": "^2.0.0",
