updated angular core, cli -> v14

--- a/client/angular.json
+++ b/client/angular.json
@@ -3,7 +3,10 @@
   "version": 1,
   "cli": {
     "packageManager": "yarn",
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ],
+    "analytics": false
   },
   "newProjectRoot": "lib",
   "projects": {
@@ -151,6 +154,5 @@
         }
       }
     }
-  },
-  "defaultProject": "main"
+  }
 }
