--- a/client/package.json
+++ b/client/package.json
@@ -20,14 +20,14 @@
     "error-stack-parser": "2.0.6"
   },
   "dependencies": {
-    "@angular/animations": "~13.3.11",
-    "@angular/common": "~13.3.11",
-    "@angular/compiler": "~13.3.11",
-    "@angular/core": "~13.3.11",
-    "@angular/forms": "~13.3.11",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
-    "@angular/router": "~13.3.11",
+    "@angular/animations": "^14.2.12",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/router": "^14.2.12",
     "@apollo/client": "^3.5.8",
     "@ngneat/until-destroy": "^9.1.2",
     "@ngrx/component": "^12.5.1",
@@ -49,14 +49,13 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.8",
+    "@angular-devkit/build-angular": "^14.2.10",
     "@angular-eslint/builder": "13.2.1",
     "@angular-eslint/eslint-plugin": "13.2.1",
     "@angular-eslint/eslint-plugin-template": "13.2.1",
-    "@angular-eslint/schematics": "13.2.1",
     "@angular-eslint/template-parser": "13.2.1",
-    "@angular/cli": "^13.3.8",
-    "@angular/compiler-cli": "13.3.11",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "14.2.12",
     "@angular/language-server": "^13.1.1",
     "@graphql-codegen/add": "3.1.1",
     "@graphql-codegen/cli": "2.6.2",
@@ -102,7 +101,7 @@
     "svgo": "^2.3.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.5.5",
+    "typescript": "~4.8.4",
     "webpack-bundle-analyzer": "^4.5.0"
   }
 }
