--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@app/*": [
-        "app/*"
-      ]
+      "@app/*": ["app/*"]
     },
     "outDir": "./dist/out-tsc",
     "resolveJsonModule": true,
@@ -21,11 +19,7 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ESNext",
-    "lib": [
-      "es2019",
-      "dom",
-      "esnext.asynciterable"
-    ],
+    "lib": ["es2019", "dom", "esnext.asynciterable"],
     "allowSyntheticDefaultImports": true,
     "useDefineForClassFields": false
   },
