all unused libs removed, all libs (except @ngrx/coponent) updated to latest versions

--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "generate-svgo": "svgo --config .svgo.config.js -f ./src/assets/icons/ -r -o ./src/assets/icons/.tmp",
-    "generate-icons": "yarn run generate-svgo && svg-to-ts",
+    "optimize-icon-svg": "svgo --config .svgo.config.js -f ./src/assets/icons/ -r -o ./src/assets/icons/.tmp",
+    "generate-icon-ts": "svg-to-ts-constants",
+    "generate-icons": "yarn run optimize-icon-svg && yarn run generate-icon-ts",
     "generate-apollo": "graphql-codegen",
     "generate-apollo:start": "graphql-codegen --watch"
   },
@@ -28,7 +29,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
-    "@apollo/client": "^3.5.8",
+    "@apollo/client": "^3.7.4",
     "@ngneat/until-destroy": "^9.1.2",
     "@ngrx/component": "^12.5.1",
     "@ngx-formly/core": "^6.0.4",
@@ -38,49 +39,50 @@
     "ngx-cookie-service": "^15.0.0",
     "ngx-logger": "^5.0.7",
     "ngx-timeago": "^2.0.0",
-    "rxjs": "^6.5.3",
-    "rxjs-debug": "^1.3.0",
+    "rxjs": "^7.8.0",
     "rxjs-etc": "^10.6.2",
-    "rxjs-spy": "^7.5.3",
+    "rxjs-spy": "^8.0.2",
     "ts-enum-util": "^4.0.2",
-    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.1",
     "@angular/cli": "^15.1.1",
     "@angular/compiler-cli": "15.1.0",
-    "@angular/language-server": "^13.1.1",
-    "@graphql-codegen/add": "3.2.3",
-    "@graphql-codegen/cli": "2.16.4",
-    "@graphql-codegen/fragment-matcher": "3.3.3",
-    "@graphql-codegen/introspection": "2.2.3",
-    "@graphql-codegen/typescript": "2.8.7",
-    "@graphql-codegen/typescript-apollo-angular": "3.5.6",
-    "@graphql-codegen/typescript-apollo-client-helpers": "2.2.6",
-    "@graphql-codegen/typescript-operations": "2.5.12",
+    "@graphql-codegen/add": "^3.2.3",
+    "@graphql-codegen/cli": "^2.16.4",
+    "@graphql-codegen/fragment-matcher": "^3.3.3",
+    "@graphql-codegen/introspection": "^2.2.3",
+    "@graphql-codegen/typescript": "^2.8.7",
+    "@graphql-codegen/typescript-apollo-angular": "^3.5.6",
+    "@graphql-codegen/typescript-apollo-client-helpers": "^2.2.6",
+    "@graphql-codegen/typescript-operations": "^2.5.12",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "casual": "^1.6.2",
-    "codelyzer": "^6.0.0",
-    "graphql": "16.6.0",
-    "graphql-cli": "^4.1.0",
-    "graphql-config": "4.3.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "cosmiconfig-toml-loader": "^1.0.0",
+    "graphql": "^16.6.0",
+    "jasmine-core": "^4.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "ngx-json-viewer": "^3.0.2",
     "prettier": "^2.5.1",
-    "protractor": "~7.0.0",
-    "svg-to-ts": "^6.0.0",
-    "svgo": "^2.3.0",
+    "protractor": "^7.0.0",
+    "svg-to-ts": "^9.0.0",
+    "svgo": "^3.0.2",
     "ts-node": "~10.9.1",
+    "tslib": "^2.3.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.8.4",
+    "typescript": "^4.9.4",
     "webpack-bundle-analyzer": "^4.5.0"
+  },
+  "overrides": {
+    "rxjs-spy": {
+      "error-stack-parser": "2.0.6"
+    }
   }
 }
