--- a/client/.svg-to-tsrc
+++ b/client/.svg-to-tsrc
@@ -5,7 +5,7 @@
   "interfaceName": "CivicIconLiteral",
   "delimiter": "CAMEL",
   "typeName": "CivicIcon",
-  "generateType": false,
+  "generateType": true,
   "generateTypeObject": true,
   "prefix": "civic",
   "fileName": "civic.icons",
