--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -1,1 +1,11 @@
-{}
+{
+  "singleQuote": true,
+  "tabWidth": 2,
+  "printWidth": 80,
+  "semi": false,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "singleAttributePerLine": true,
+  "bracketSameLine": true,
+  "htmlWhitespaceSensitivity": "css"
+}
