--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.1",
+    "@angular-eslint/builder": "15.2.0",
+    "@angular-eslint/eslint-plugin": "15.2.0",
+    "@angular-eslint/eslint-plugin-template": "15.2.0",
+    "@angular-eslint/schematics": "15.2.0",
+    "@angular-eslint/template-parser": "15.2.0",
     "@angular/cli": "^15.1.1",
     "@angular/compiler-cli": "15.1.0",
     "@graphql-codegen/add": "^3.2.3",
@@ -59,8 +64,11 @@
     "@graphql-codegen/typescript-operations": "^2.5.12",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
     "casual": "^1.6.2",
     "cosmiconfig-toml-loader": "^1.0.0",
+    "eslint": "^8.31.0",
     "graphql": "^16.6.0",
     "jasmine-core": "^4.5.0",
     "jasmine-spec-reporter": "^7.0.0",
