--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "ng-zorro-antd": "^15.0.1",
     "ngx-cookie-service": "^15.0.0",
     "ngx-logger": "^5.0.7",
+    "ngx-pipes": "^3.2.0",
     "ngx-timeago": "^2.0.0",
     "rxjs": "^7.8.0",
     "rxjs-etc": "^10.6.2",
