--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 127.0.0.1",
     "build": "ng build --build-optimizer",
     "build:stats": "ng build --stats-json",
     "analyze": "webpack-bundle-analyzer ../server/public/stats.json",
