improved start, build, build:watch yarn scripts, ng options

--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 127.0.0.1",
-    "build": "ng build --build-optimizer",
-    "build:stats": "ng build --stats-json",
-    "analyze": "webpack-bundle-analyzer ../server/public/stats.json",
+    "start": "ng serve --hmr --host 127.0.0.1",
+    "start:production": "ng serve --hmr --configuration production --watch --port 4210",
+    "build": "ng build --configuration production",
+    "build:watch": "ng build --watch --configuration production",
+    "build:generate-stats": "ng build --configuration production --stats-json && webpack-bundle-analyzer ../server/public/stats.json",
+    "build:analyze-stats": "yarn run build:generate-stats && webpack-bundle-analyzer ../server/public/stats.json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
