--- a/server/test/fixtures/molecular_profiles.yml
+++ b/server/test/fixtures/molecular_profiles.yml
@@ -1,12 +1,12 @@
 mp1:
-  name: MP1
+  raw_name: MP1
   evidence_score: 1.5
 mp2:
-  name: MP2
+  raw_name: MP2
   evidence_score: 21.5
 mp3:
-  name: MP3
+  raw_name: MP3
   evidence_score: 50
 mp4:
-  name: MP4
+  raw_name: MP4
   evidence_score: 101.2
