--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: 'ubuntu-latest'
     strategy:
       matrix:
-        ruby: ['3.0']
+        ruby: ['3.0', '3.2']
     services:
         postgres:
           image: postgres:13
