speedy entity-tag-list working w/ template, context Inputs setters

--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "@ngrx/component": "^15.1.0",
     "@ngx-formly/core": "^6.0.4",
     "@ngx-formly/ng-zorro-antd": "^6.1.0",
+    "@tinkoff/ng-polymorpheus": "^4.0.10",
     "apollo-angular": "^4.2.0",
     "ng-zorro-antd": "^15.0.1",
     "ngx-cookie-service": "^15.0.0",
