--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
+    "@angular-eslint/schematics": "^16.1.0",
     "@angular/cli": "^16.1.4",
     "@angular/compiler-cli": "16.1.5",
     "@graphql-codegen/add": "^3.2.3",
