--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "generate-icon-ts": "svg-to-ts-constants",
     "generate-icons": "yarn run optimize-icon-svg && yarn run generate-icon-ts",
     "generate-apollo": "graphql-codegen",
-    "generate-apollo:start": "graphql-codegen --watch"
+    "generate-apollo:start": "graphql-codegen --watch",
+    "generate-icon-data": "scripts/generate-icon-data.js"
   },
   "private": true,
   "resolutions": {
@@ -57,6 +58,7 @@
     "@graphql-codegen/typescript-apollo-client-helpers": "^2.2.6",
     "@graphql-codegen/typescript-operations": "^2.5.12",
     "@types/node": "^12.11.1",
+    "directory-tree": "^3.5.1",
     "graphql": "^16.7.1",
     "ngx-json-viewer": "^3.0.2",
     "prettier": "^2.5.1",
