--- a/server/config/webpacker.yml
+++ b/server/config/webpacker.yml
@@ -90,3 +90,15 @@ production:
 
   # Cache manifest.json for performance
   cache_manifest: true
+
+headless:
+  <<: *default
+
+  # Production depends on precompilation of packs prior to booting for performance.
+  compile: false
+
+  # Extract and emit a css file
+  extract_css: true
+
+  # Cache manifest.json for performance
+  cache_manifest: true
