--- a/client/.editorconfig
+++ b/client/.editorconfig
@@ -16,6 +16,7 @@ max_line_length = off
 trim_trailing_whitespace = false
 
 [*.less]
+quote_type = double
 charset = utf-8
 indent_style = space
 indent_size = 2
