adjust docker build workflow

--- a/.github/workflows/publish_headless_docker.yml
+++ b/.github/workflows/publish_headless_docker.yml
@@ -32,8 +32,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./server
-          file: Dockerfile-headless
+          file: ./server/Dockerfile-headless
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
