--- a/client/package.json
+++ b/client/package.json
@@ -45,11 +45,11 @@
     "rxjs-spy": "^8.0.2",
     "ts-enum-util": "^4.0.2",
     "ts-mixin-extended": "^1.1.1",
-    "zone.js": "~0.13.1"
+    "zone.js": "0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
-    "@angular-eslint/schematics": "^16.1.0",
+    "@angular-eslint/schematics": "^16.1.2",
     "@angular/cli": "^16.1.4",
     "@angular/compiler-cli": "16.1.5",
     "@graphql-codegen/add": "^3.2.3",
@@ -71,7 +71,7 @@
     "ts-node": "~10.9.1",
     "tslib": "^2.3.1",
     "tslint": "~6.1.0",
-    "typescript": "^4.9.4",
+    "typescript": "5.2.2",
     "webpack-bundle-analyzer": "^4.5.0"
   },
   "overrides": {
