--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,7 @@
     "@ngx-formly/core": "^6.2.2",
     "@ngx-formly/ng-zorro-antd": "^6.2.2",
     "apollo-angular": "^5.0.0",
-    "ng-zorro-antd": "^17.1.0",
+    "ng-zorro-antd": "17.0.0",
     "ngx-cookie-service": "^16.0.0",
     "rxjs": "^7.8.1",
     "rxjs-etc": "^10.6.2",
